tests/errors/14_goto_invalid_label.f
      PROGRAM GOTO_INVALID_LABEL
      GOTO 99
      END
